<resources>
    <string name="app_name">Pinch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="email_lbl">Email</string>
    <string name="password_lbl">Password</string>
    <string name="error_password_length">Password must be atleast 8 characters</string>
    <string name="error_email_invalid">Invalid email address</string>
    <string name="title_activity_main">Main</string>

    <string name="title_profile">Profile</string>
    <string name="title_volunteer">Volunteer</string>
    <string name="title_events">Events</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_friends">Friends</string>
    <string name="title_groups">Groups</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="not_implemented">This section is not implemented</string>
    <string name="title_charities_contact">Allow Charities To Contact Me</string>
    <string name="desc_your_profile">Your Profile Pic</string>
    <string name="title_profession">Professions</string>
    <string name="title_interests">Interests</string>
    <string name="title_skills">Skills</string>
</resources>
